# midside-gain-audio-plugin

./: .gitignore  CMakeLists.txt
cmake/: CPM.cmake
plugin/: CMakeLists.txt
plugin/include/: PluginEditor.h  PluginProcessor.h
plugin/include/parameterControls/: ComboBoxControl.h  ParameterControl.h  ParameterFactory.h  ParameterToggle.h
plugin/include/ui/: CtmComboBox.h  CtmLookAndFeel.h  CtmSlider.h  CtmToggle.h  SliderLabel.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/source/parameterControls/: ComboBoxControl.cpp  ParameterControl.cpp  ParameterFactory.cpp  ParameterToggle.cpp
plugin/source/ui/: CtmLookAndFeel.cpp  CtmSlider.cpp  CtmToggle.cpp  SliderLabel.cpp
